@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1113 2012/10/04 00:08:40 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1114 2012/10/06 05:22:16 zmedico Exp $
+
+  06 Oct 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.11.23.ebuild,
+  -portage-2.2.0_alpha134.ebuild:
+  Remove old versions.
 
 *portage-2.2.0_alpha135 (04 Oct 2012)
 
